fixed right padding on mobile/fixed navbar

--- a/app.css
+++ b/app.css
@@ -1,3 +1,7 @@
+html, body {
+    overflow-x: hidden;
+  }
+
 body {
     background: #fff9fb;
     color:rgba(255, 239, 243);
@@ -5,8 +9,9 @@ body {
 }
 
 #mainNavbar {
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     font-weight: 100;
+    margin:0 0 0 0;
 }
 
 .navbar-toggler {
